--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root{
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+}
